[package]
name = "simed"
version = "0.0.1"
edition = "2021"
description = "Simulate Degenerate String"
authors = ["Njagi Mwaniki <njagi+bio@njagi.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
clap = "3.1.6"
eds = { git = "https://github.com/urbanslug/eds.git" }
